fix: make parallax look nice on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3833,7 +3833,6 @@ h3 {
 }
 
 .parallax-banner {
-  transform-style: preserve-3d;
   position: relative;
   z-index: -100;
 }
@@ -3855,9 +3854,13 @@ h3 {
   transform-origin: 50% 0;
   position: absolute;
   z-index: 100;
+  display: block;
+  object-fit: cover;
+  height: 140%;
+  width: 100%;
 }
 
 .parallax-banner .carousel-caption {
-  padding: 12rem;
+  padding: 12rem 0;
   z-index: 200;
 }
